side bar overlap fixed

--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -2,6 +2,5 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 300px;
     border-right: 1px solid #ccc;
 }
